# data-annotation-course

./: .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt  run.py
scripts/: 1_collect_images.py  2_classify_images.py  3_clean_images.py  4_statistics.py  cli.py  generate_entry_points.py  generate_solve_scripts.py  run_all.py  run_notebook.py
scripts/lib/: clean.py
utils/: __init__.py  image_utils.py
模拟试卷1/: 1-a.py  1-b.py  2-a.py  2-b.py  run_all.py  模拟试卷1.docx
模拟试卷1/试题1-数据采集和处理/a)业务数据采集/: run.py  solve.py
模拟试卷1/试题1-数据采集和处理/b)业务数据处理/: run.py  solve.py
模拟试卷1/试题2-数据标注/a)原始数据清洗与标注/: run.py  solve.py
模拟试卷1/试题2-数据标注/b)标注后数据分类与统计/: run.py  solve.py
模拟试卷1/试题3-智能系统运维/: znxtyw-st1.ipynb
模拟试卷2/: 1-a.py  1-b.py  2-a.py  2-b.py  run_all.py  模拟试卷2.docx
模拟试卷2/试题1-数据采集和处理/a)业务数据采集/: run.py  solve.py
模拟试卷2/试题1-数据采集和处理/b)业务数据处理/: run.py  solve.py
模拟试卷2/试题2-数据标注/a)原始数据清洗与标注/: run.py  solve.py
模拟试卷2/试题2-数据标注/b)标注后数据分类与统计/: run.py  solve.py
模拟试卷2/试题3-智能系统运维/: znxtyw-st4.ipynb
模拟试卷3/: run_all.py  模拟试卷3.docx
模拟试卷3/试题1-数据采集和处理/a)业务数据采集/: run.py  solve.py
模拟试卷3/试题1-数据采集和处理/b)业务数据处理/: run.py  solve.py
模拟试卷3/试题2-数据标注/a)原始数据清洗与标注/: run.py  solve.py
模拟试卷3/试题2-数据标注/b)标注后数据分类与统计/: run.py  solve.py
