[project]
name = "data-annotation-course"
version = "1.0.0"
description = "数据标注课程自动化解题脚本"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "requests>=2.30.0",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
full = [
    "tensorflow>=2.14.0",
    "matplotlib>=3.7.0",
    "notebook>=7.0.0",
    "nbconvert>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "utils"]
